--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "mysql": "^2.13.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "styled-components": "^3.4.10"
+    "react-rainbow-components": "^1.18.1",
+    "styled-components": "^3.4.10",
+    "styled-theming": "^2.2.0"
   }
 }
